--- a/login.html
+++ b/login.html
@@ -1,9 +1,14 @@
 <html>
 <head>
-  <title>login here</title>
+  <title>login page</title>
   
 </head>
   <body>
+    <h1>login here</h1>
+    <label>
+      username
+    </label>
+    <input type="text" placeholder="enter username">
     
   </body>
 </html>
