--- a/login.html
+++ b/login.html
@@ -9,6 +9,10 @@
       username
     </label>
     <input type="text" placeholder="enter username">
+    <label>
+      password
+    </label>
+    <input type="password" placeholder="password"
     
   </body>
 </html>
