--- a/login.html
+++ b/login.html
@@ -12,7 +12,10 @@
     <label>
       password
     </label>
-    <input type="password" placeholder="password"
+    <input type="password" placeholder="password">
+    <label>
+      phone
+    </label>
     
   </body>
 </html>
